--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,7 @@ configurations {
     ant_lib
     mps
     mpsArtifacts
+    libs
 }
 
 ext.mpsVersion = '2018.2.4'
@@ -50,6 +51,9 @@ dependencies {
     ant_lib "org.apache.ant:ant-junit:1.10.1"
     mps "com.jetbrains:mps:$mpsVersion"
     mpsArtifacts "org.iets3:opensource:0.1+"
+    libs "de.itemis.mps.build.example:javalib:1.0+"
+    libs "org.jdom:jdom:2.0.2"
+    //libs group: 'org.javamoney.moneta', name: 'moneta-core', version: '1.2.1'
 }
 
 repositories {
@@ -57,6 +61,7 @@ repositories {
         url 'https://projects.itemis.de/nexus/content/groups/OS/'
     }
     mavenCentral()
+    mavenLocal()
 }
 
 ext.project_home = '-Dproject.home=' + file(rootDir).getAbsolutePath()
@@ -77,6 +82,17 @@ task generateLibrariesXml(type: GenerateLibrariesXml) {
     overrides rootProject.file('projectlibraries.overrides.properties')
 
 }
+
+task resolveLibs(type: Copy) {
+    doFirst {
+        delete libsDir
+    }
+    from {
+        configurations.libs.resolve()
+    }
+    into libsDir
+}
+
 
 task resolveMps(type: Copy) {
     from {
